--- a/src/main/webapp/sueteres.html
+++ b/src/main/webapp/sueteres.html
@@ -12,6 +12,12 @@
 
     </head>
     <body>
+         <div class="nav-links">
+            <a href="menuPrincipal.jsp"><img src="https://img.icons8.com/?size=100&id=39977&format=png&color=000000" alt="Regresar" style="width:50px;height:50px;"></a>
+            <a href="CarritoServlet">
+                <img src="https://img.icons8.com/?size=100&id=59997&format=png&color=000000" alt="Ir al Carrito" style="width:50px;height:50px;">
+            </a>
+        </div>
 
 
         <div class="menu">
